added removing user from events query, API setup, post call, and function in users
